--- a/templates/home.html
+++ b/templates/home.html
@@ -312,7 +312,7 @@
         /* --- FINAL Project Card Styles (Header Bar on All Screens) --- */
         .project-card-visual {
             position: relative;
-            height: 10rem; /* 160px */
+            height: 6rem;
             background-color: rgba(13, 148, 136, 0.05);
             background-image: linear-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
             background-size: 2rem 2rem;
