--- a/templates/home.html
+++ b/templates/home.html
@@ -373,7 +373,7 @@
 
             .project-partner-logo {
                 position: absolute;
-                top: 1rem;
+                top: 50%;
                 left: 1.5rem;
                 transform: none;
                 height: 1.5rem;
